# StocksNews

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appspec.yml  install-dependencies.sh  main.cpp
StocksNews/: https_client.cpp  https_client.hpp
Tests/: CMakeLists.txt  data_stream_tests.cpp  https_client.hpp  qwant_resp_tests.cpp  sorted_stocks_tests.cpp  stocks_news_tests.cpp  stocks_news_tests.hpp
Tests/stocks/: expected_stocks_test_database.csv  original_stocks_test_database.csv
lib/: libboost_filesystem.so.1.63.0  libboost_system.so.1.63.0  libboost_unit_test_framework.so.1.63.0
scripts/: auto_update.sh  build-stocksnews.sh  deploy-aws.sh  install-dependencies.sh  stocksnews_fm_scratch.sh  test-stocksnews.sh  test-units.sh
src/: CMakeLists.txt  data_stream.cpp  data_stream.hpp  https_client.cpp  https_client.hpp  json_tree.cpp  json_tree.hpp  qwant_response.cpp  qwant_response.hpp  sorted_stocks.cpp  sorted_stocks.hpp  stocks_news.cpp  stocks_news.hpp
stocks/: expected_stocks_test_database.csv  original_stocks_test_database.csv  stocks_database_Paris.csv  stocks_test_database_with_neg_val.csv  stocks_with_zero_test_database.csv
tests/: CMakeLists.txt  data_stream_tests.cpp  qwant_resp_tests.cpp  sorted_stocks_tests.cpp  stocks_news_tests.cpp
tests/stocks/: expected_stocks_test_database.csv
